# AdventOfCode

./: CMakeLists.txt  common.cpp  common.hpp
2022/: day1.cpp  day1_1.cpp  day2.cpp  day2_2.cpp
2022/python/: day1.py  day1_1.py  day2.py  day2_1.py  day3.py  day3_1.py  day4.py  day4_1.py  day5.py  day5_1.py  day6.py  day6_1.py  day8.py  day8_1.py
2023/: common.cpp  common.hpp  day1.cpp  day2.cpp  day2_2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  input copy.txt
2023/input/: day1_1.txt  day3_2.txt
2024/python/: day1.py  day1_1.py  day2.py  day2_1.py  day3.py  day3_1.py  day4.py  day4_1.py  day5_1.py  day6.py  day6_1.py
